2002-11-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-view.el (mime-view-insert-fontified-text-content): Make
	sure font-lock is loaded before using it.

2002-10-26  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>

	* mime-view.el (mime-preview-find-boundary-info): Fix logic. Do not
	refer next to next part before examining the next part.

2002-08-28  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mime-edit.el (mime-edit-user-agent-value): Add
	`xemacs-extra-name'.

2002-04-16   Daiki Ueno  <ueno@unixuser.org>

	* mime-edit.el (mime-file-types): Add setting of *.jpeg for image/jpeg.

2002-03-06   Daiki Ueno  <ueno@unixuser.org>

	* mime-view.el (mime-view-read-charset): Remove redundant checking for
	sanity when reading MIME-charset.
	[cf. <emacs-mime-ja:995>]

2002-02-14  Yuuichi Teranishi <teranisi@gohome.org>

	* mime-image.el (mime-image-create) [XEmacs]: Ignore errors about
	to obtain the instance of glyph's image.
	[cf. <emacs-mime-ja:989>]

2001-11-27   Daiki Ueno  <ueno@unixuser.org>

	* mime-w3.el: Don't use `url-register-protocol' if it is not fboundp;
	announce `url-cid' feature instead.
	[cf. <Wanderlust:8566>]

	(url-cid): Change return value for the current URL package.

2001-11-05  Yuuichi Teranishi  <teranisi@gohome.org>

	* mime-play.el (mime-play-entity): Use return value of
	`mime-entity-situation' to get content type information;
	Fix problem when method is invoked at menu selection;
	Fix the message displayed on echo buffer when no method is specified;
	Clear minibuffer after `y-or-n-p'.

	* semi-def.el (mime-should-use-popup-menu) [Emacs]: Use
	`event-basic-type' instead of `event-modifiers' to detect mouse
	operation.

2001-10-02   Daiki Ueno  <ueno@unixuser.org>

	* mime-view.el: Add `mime-view-maybe-inherit-widget-keymap' to
	`mime-view-mode-map' instead of `mime-view-define-keymap-hook'.
	[cf. <emacs-mime-ja:950>]

	* mime-bbdb.el: Add `mime-bbdb/define-keys' to `mime-view-mode-map'
	instead of `mime-view-define-keymap-hook'.
